--- a/less/variables.less
+++ b/less/variables.less
@@ -18,7 +18,7 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         lighten(spin(#428bca, 45), 8%);
+@brand-primary:         #333333;
 @brand-success:         spin(#5cb85c, -10);
 @brand-warning:         spin(#f0ad4e, -15);
 @brand-danger:          spin(#d9534f, -20);
@@ -617,3 +617,4 @@
 
 // Large screen / wide desktop
 @container-lg-desktop:        ((1140px + @grid-gutter-width));
+
